# Photo-pipeline

./: .gitignore  LICENSE  README.md  config.ini  func.py  photo-pipeline.bat  process.py  pyproject.toml
Software settings/FastRawViewer/: Keybinds.txt  LastUsedSettings.reg  Preferences.reg  Shortcuts.reg
Software settings/darktable/: darktable_tags.txt
